fix: alert nowrap

--- a/client/src/components/Contact/_Contact.scss
+++ b/client/src/components/Contact/_Contact.scss
@@ -35,6 +35,10 @@
     font-weight: 500;
     text-align: center;
     border-radius: 2rem;
+
+    @include respond(phone) {
+      white-space: nowrap;
+    }
   }
 
   .contact__input {
